@@ -18,4 +18,5 @@ ivy.version=2.2.0
 pig.version=0.8.0
 commons-cli.version=1.0
 #hadoop-core.version=0.20.2 Waiting for a secure version of hadoop in maven
+rats-lib.version=0.5.1
 
