@@ -15,6 +15,8 @@ Release 0.1.0 - Unreleased
     (Krishna Kumar via macyang)
 
   IMPROVEMENTS
+    HCAT-44. Add a releaseaudit target to build.xml (gates)
+
   	HCAT-40. Remove dependencies from the HCatalog client jar (macyang)
 
   	HCAT-27. Start and stop scripts for the server (gates)
